--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-and-container/sw-condition-and-container.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-and-container/sw-condition-and-container.html.twig
@@ -7,13 +7,14 @@
                          :class="'sw-condition-container__and-child--' + index"
                          :key="index">
                         {% block sw_condition_and_container_children_spacer %}
-                            <div v-if="index"
+                            <div v-if="index && !child.isDeleted"
                                  class="condition-content__spacer--and">
                                 {{ $tc('global.sw-condition.condition.and') }}
                             </div>
                         {% endblock %}
                         {% block sw_condition_and_container_children_component %}
                             <component :is="getComponent(child)"
+                                       v-if="!child.isDeleted"
                                        :condition="child"
                                        :level="level + 1"
                                        :parentDisabledDelete="disabledDeleteButton"
