--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
@@ -96,11 +96,14 @@
             {% endblock %}
 
             {% block sw_manufacturer_detail_attribute_sets %}
-                <sw-attribute-set-renderer
-                        v-if="next754"
-                        :entity="manufacturer"
-                        :sets="attributeSets">
-                </sw-attribute-set-renderer>
+                <sw-card :title="$tc('sw-settings-attribute.general.mainMenuItemGeneral')"
+                         v-if="next754 && attributeSets.length > 0"
+                         :isLoading="manufacturer.isLoading">
+                    <sw-attribute-set-renderer
+                            :entity="manufacturer"
+                            :sets="attributeSets">
+                    </sw-attribute-set-renderer>
+                </sw-card>
             {% endblock %}
         </sw-card-view>
     {% endblock %}
