--- a/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.html.twig
@@ -45,9 +45,11 @@
                 {% endblock %}
 
                 {% block sw_order_detail_attribute_sets %}
-                    <sw-card>
+                <sw-card :title="$tc('sw-settings-attribute.general.mainMenuItemGeneral')"
+                         v-if="next754 && attributeSets.length > 0"
+                         :isLoading="order.isLoading">
                         <sw-attribute-set-renderer
-                                v-if="next754"
+                                :disabled="!isEditing"
                                 :entity="order"
                                 :sets="attributeSets">
                         </sw-attribute-set-renderer>
