--- a/Resources/administration/src/module/sw-plugin/view/sw-plugin-list/sw-plugin-list.scss
+++ b/Resources/administration/src/module/sw-plugin/view/sw-plugin-list/sw-plugin-list.scss
@@ -18,7 +18,7 @@
 
             .sw-plugin-list__author-name {
                 color: $color-gray;
-                font-size: 14px;
+                font-size: $font-size-small;
             }
         }
     }
