--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login/sw-plugin-store-login.html.twig
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login/sw-plugin-store-login.html.twig
@@ -1,49 +1,97 @@
-<sw-modal class="sw-plugin-store-login" v-if="showModal" @closeModal="onCloseModal()" :showHeader="false">
-    <div class="sw-plugin-store-login__close-button-container">
-        <button class="sw-modal__close"
-                :title="$tc('global.sw-modal.labelClose')"
-                :aria-label="$tc('global.sw-modal.labelClose')"
-                @click.prevent="onCloseModal()">
-            {% block sw_modal_close_icon %}
-                <sw-icon name="small-default-x-line-medium" small></sw-icon>
-            {% endblock %}
-        </button>
-    </div>
-
-    <div class="sw-plugin-store-login__content">
-        <div class="sw-plugin-store-login__illustration">
-            <img :src="'/administration/static/img/plugin--manager-login.png' | asset" alt="">
-        </div>
-        <div class="sw-plugin-store-login__form">
-            <div class="sw-plugin-store-login__information">
-                <h3>{{ $tc('sw-plugin.store-login.headline') }}</h3>
-                <p class="information-text">{{ $tc('sw-plugin.store-login.information') }}</p>
+{% block sw_plugin_store_login_modal %}
+    <sw-modal class="sw-plugin-store-login" v-if="showModal" @closeModal="onCloseModal()" :showHeader="false">
+        {% block sw_plugin_store_login_modal_close %}
+            <div class="sw-plugin-store-login__close-button-container">
+                {% block sw_plugin_store_login_modal_close_button %}
+                    <button class="sw-modal__close"
+                            :title="$tc('global.sw-modal.labelClose')"
+                            :aria-label="$tc('global.sw-modal.labelClose')"
+                            @click.prevent="onCloseModal()">
+                        {% block sw_plugin_store_login_modal_close_icon %}
+                            <sw-icon name="small-default-x-line-medium" small></sw-icon>
+                        {% endblock %}
+                    </button>
+                {% endblock %}
             </div>
-            <form role="form">
-                <sw-text-field v-model="shopwareId" label="-" v-on:keyup.enter="onLoginClick()">
-                    <div class="shopware-id-label" slot="label">
-                        <span>{{ $tc('sw-plugin.store-login.labelShopwareId') }}</span>
-                        <a href="#" target="_blank">{{ $tc('sw-plugin.store-login.labelShopwareIdHelp') }}</a>
+        {% endblock %}
+
+        {% block sw_plugin_store_login_modal_content %}
+            <div class="sw-plugin-store-login__content">
+                {% block sw_plugin_store_login_modal_content_illustration %}
+                    <div class="sw-plugin-store-login__illustration">
+                        {% block sw_plugin_store_login_modal_content_illustration_image %}
+                            <img :src="'/administration/static/img/plugin-manager--login.png' | asset" alt="Shopware Account Login">
+                        {% endblock %}
                     </div>
-                </sw-text-field>
-                <sw-password-field v-model="password" :label="$tc('sw-plugin.store-login.labelPassword')" v-on:keyup.enter="onLoginClick()">
-                </sw-password-field>
-            </form>
-            <div class="forgot-password" >
-                <a :href="$tc('sw-plugin.store-login.forgotPasswordUrl')" target="_blank">Passwort vergessen?</a>
+                {% endblock %}
+                {% block sw_plugin_store_login_modal_content_login_form %}
+                    <div class="sw-plugin-store-login__form">
+                        {% block sw_plugin_store_login_modal_content_login_form_information %}
+                            <div class="sw-plugin-store-login__information">
+                                <h3>{{ $tc('sw-plugin.store-login.headline') }}</h3>
+                                <p class="information-text">{{ $tc('sw-plugin.store-login.information') }}</p>
+                            </div>
+                        {% endblock %}
+                        {% block sw_plugin_store_login_modal_content_login_form_input %}
+                            <form role="form">
+                                {% block sw_plugin_store_login_modal_content_login_form_input_shopwareId %}
+                                    <sw-text-field v-model="shopwareId" label="-" v-on:keyup.enter="onLoginClick()">
+                                        {% block sw_plugin_store_login_modal_content_login_form_input_shopwareId_label %}
+                                            <template slot="label">
+                                                <div class="shopware-id-label">
+                                                    <span>{{ $tc('sw-plugin.store-login.labelShopwareId') }}</span>
+                                                    <a href="#" target="_blank">{{ $tc('sw-plugin.store-login.labelShopwareIdHelp') }}</a>
+                                                </div>
+                                            </template>
+                                        {% endblock %}
+                                    </sw-text-field>
+                                {% endblock %}
+                                {% block sw_plugin_store_login_modal_content_login_form_input_password %}
+                                    <sw-password-field v-model="password" :label="$tc('sw-plugin.store-login.labelPassword')"
+                                                       v-on:keyup.enter="onLoginClick()">
+                                    </sw-password-field>
+                                {% endblock %}
+                            </form>
+                        {% endblock %}
+                        {% block sw_plugin_store_login_modal_content_login_form_forgot_password %}
+                            <div class="forgot-password">
+                                {% block sw_plugin_store_login_modal_content_login_form_forgot_password_link %}
+                                    <a :href="$tc('sw-plugin.store-login.forgotPasswordUrl')" target="_blank">Passwort vergessen?</a>
+                                {% endblock %}
+                            </div>
+                        {% endblock %}
+                    </div>
+                {% endblock %}
             </div>
-        </div>
-    </div>
+        {% endblock %}
 
-    <div slot="modal-footer" class="sw-plugin-store-login__footer">
-        <div class="footer-information">
-            <span>{{ $tc('sw-plugin.store-login.footerNoAccount') }}</span>
-            <a class="new-account-link" :href="$tc('sw-plugin.store-login.registerAccountUrl')" target="_blank">{{ $tc('sw-plugin.store-login.footerRegisterAccount') }}</a>
-        </div>
-        <div class="footer-button-container">
-            <sw-button class="cancel-button" size="small" @click="onCloseModal()">{{ $tc('sw-plugin.store-login.buttonCancel') }}</sw-button>
-            <sw-button variant="primary" type="submit" size="small" @click="onLoginClick()">{{ $tc('sw-plugin.store-login.buttonLogin') }}</sw-button>
-        </div>
-    </div>
-</sw-modal>
-
+        {% block sw_plugin_store_login_modal_footer %}
+            <template slot="modal-footer">
+                <div class="sw-plugin-store-login__footer">
+                    {% block sw_plugin_store_login_modal_footer_information %}
+                        <div class="footer-information">
+                            <span>{{ $tc('sw-plugin.store-login.footerNoAccount') }}</span>
+                            <a class="new-account-link" :href="$tc('sw-plugin.store-login.registerAccountUrl')" target="_blank">
+                                {{ $tc('sw-plugin.store-login.footerRegisterAccount') }}
+                            </a>
+                        </div>
+                    {% endblock %}
+                    {% block sw_plugin_store_login_modal_footer_actions %}
+                        <div class="footer-button-container">
+                            {% block sw_plugin_store_login_modal_footer_actions_cancel %}
+                                <sw-button class="cancel-button" size="small" @click="onCloseModal()">
+                                    {{ $tc('sw-plugin.store-login.buttonCancel') }}
+                                </sw-button>
+                            {% endblock %}
+                            {% block sw_plugin_store_login_modal_footer_actions_login %}
+                                <sw-button variant="primary" type="submit" size="small" @click="onLoginClick()">
+                                    {{ $tc('sw-plugin.store-login.buttonLogin') }}
+                                </sw-button>
+                            {% endblock %}
+                        </div>
+                    {% endblock %}
+                </div>
+            </template>
+        {% endblock %}
+    </sw-modal>
+{% endblock %}
