--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login/sw-plugin-store-login.scss
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login/sw-plugin-store-login.scss
@@ -50,7 +50,7 @@
             padding-bottom: 25px;
 
             p {
-                font-size: 14px;
+                font-size: $font-size-small;
             }
         }
     }
