--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-updates-grid/sw-plugin-updates-grid.scss
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-updates-grid/sw-plugin-updates-grid.scss
@@ -2,6 +2,10 @@
 
 .sw-plugin-updates-grid {
 
+    p {
+        white-space: initial;
+    }
+
     .sw-plugin-updates-grid__info-container {
         align-items: center;
 
@@ -16,8 +20,8 @@
             flex-direction: column;
 
             .sw-plugin-updates-grid__upgraded-date {
-                color: #9aa7be;
-                font-size: 14px;
+                color: $color-gray;
+                font-size: $font-size-small;
             }
         }
 
@@ -28,9 +32,17 @@
         flex-direction: column;
         align-items: flex-end;
 
+        .sw-loader {
+            position: unset;
+
+            .sw-loader__container {
+                display: inherit;
+            }
+        }
+
         .sw-plugin-updates-grid__version {
             margin-top: 6px;
-            font-size: 14px;
+            font-size: $font-size-small;
             color: $color-gray;
         }
     }
