--- a/Resources/administration/src/module/sw-plugin/view/sw-plugin-license-list/sw-plugin-license-list.scss
+++ b/Resources/administration/src/module/sw-plugin/view/sw-plugin-license-list/sw-plugin-license-list.scss
@@ -1,7 +1,15 @@
+@import "~scss/variables";
+
 .sw-plugin-licenses-list {
 
-    .top-actions {
-        max-width: 800px;
-        margin: 0 auto 40px auto;
+    .context {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+
+        .version {
+            font-size: 12px;
+            color: $color-gray;
+        }
     }
 }
