NEXT-1655 - update e2e test for new select field

--- a/Resources/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
@@ -34,7 +34,7 @@
             {% block sw_product_basic_form_manufacturer_field %}
 
                 <sw-select :store="manufacturerStore"
-                           name="selectManufactureForProduct"
+                           class="sw-select-product__select_manufacturer"
                            id="manufacturerId"
                            :required="true"
                            :placeholder="$tc('sw-product.basicForm.placeholderManufacturer')"
